--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "vite-plugin-checker": "^0.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
