--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
+    "react-toastify": "^9.1.1",
     "vite-plugin-checker": "^0.5.4"
   },
   "devDependencies": {
